# AIAgents3997-HW7

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  PROMPT_BOOK.md  README.md  REFACTORING_SUMMARY.md  bandit-report.json  config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  reset_league.sh  run_simulation.sh  setup.py
.claude/: CLAUDE.md
.claude/agents/: agent-orchestrator.md  config-security-baseline.md  continuous-dev-orchestrator.md  cost-analyzer.md  extensibility-planner.md  final-checklist-gate.md  git-workflow.md  implementer.md  prd-author.md  prompt-log-initializer.md  prompt-log-updater.md  python-env-setup.md  quality-standard-mapper.md  readme-author.md  ui-documentor.md  visualization-curator.md
.github/workflows/: ci.yml
config/: game_registry.yaml  league.yaml
docs/: Architecture.md  BUDGET.md  CONTRIBUTING.md  COSTS.md  EXTENSIBILITY.md  FINAL_CHECKLIST.md  GIT_WORKFLOW.md  PRD.md  QUALITY_STANDARD.md  RESEARCH.md  USAGE.md
docs/ADRs/: 001-json-rpc-transport.md  002-round-robin-scheduling.md  003-game-agnostic-referee.md  template.md
docs/development/: BUILDING_BLOCKS.md  EDGE_CASE_REPORT.md  FINAL_CHECKLIST.md  PROMPT_LOG.md  QUALITY_REPORT.md  QUALITY_STANDARD.md  REFACTORING_SUMMARY.md
docs/development/deliverables/: IMPLEMENTATION_COMPLETE.md  TEST_MANIFEST.md  TEST_SUMMARY.md
docs/diagrams/: league-flow.md  match-execution-flow.md  scheduling-flow.md
docs/examples/: TERMINAL_EXAMPLES.md
docs/prd/: section-1-scope-and-actors.md  section-10-out-of-scope.md  section-2-transport-and-protocol.md  section-3-registration-and-auth.md  section-4-scheduling-and-rounds.md  section-5-match-execution.md  section-6-results-and-standings.md  section-7-timeouts-and-errors.md  section-8-persistence-and-logging.md  section-9-configuration-and-extensibility.md
docs/protocol/examples/: match_result_report.json  register_player_request.json  register_referee_request.json
results/: README.md
scripts/: generate_token_visualization.py  reset_league.sh  run_simulation.sh  run_tests.sh
src/: __init__.py
src/common/: __init__.py  agent_base.py  auth.py  cli_helpers.py  config.py  errors.py  game_interface.py  logging_utils.py  persistence.py  protocol.py  registry.py  request_handlers.py  strategy_interface.py  tic_tac_toe_utils.py  transport.py
src/league_manager/: __init__.py  main.py  match_assigner.py  registration.py  scheduler.py  server.py  standings.py  state.py
src/player/: __init__.py  main.py  server.py  strategy.py
src/player/strategies/: __init__.py  tic_tac_toe_random.py  tic_tac_toe_smart.py
src/referee/: __init__.py  main.py  match_executor.py  server.py
src/referee/games/: __init__.py  tic_tac_toe.py
tests/: README.md  conftest.py
tests/common/: test_auth.py  test_persistence.py  test_protocol.py  test_transport.py
tests/integration/: test_full_league.py
tests/league_manager/: test_registration.py  test_scheduler.py  test_standings.py
tests/player/: test_strategy.py
tests/referee/: test_match_executor.py  test_tic_tac_toe.py
