[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-league-system"
version = "1.0.0"
description = "A game-agnostic league system for autonomous agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent League Team", email = "agents@league-system.dev"}
]
maintainers = [
    {name = "Agent League Team", email = "agents@league-system.dev"}
]
keywords = [
    "agent",
    "league",
    "tournament",
    "game-agnostic",
    "multi-agent",
    "json-rpc",
    "autonomous-agents",
    "round-robin",
    "competition",
    "referee"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/aiagents/agent-league-system"
Documentation = "https://github.com/aiagents/agent-league-system/docs"
Repository = "https://github.com/aiagents/agent-league-system"
Issues = "https://github.com/aiagents/agent-league-system/issues"
Changelog = "https://github.com/aiagents/agent-league-system/blob/main/docs/PROMPT_LOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "matplotlib>=3.7.0",
    "build>=0.10.0",
    "setuptools>=68.0",
    "wheel>=0.40.0",
]

[project.scripts]
league-manager = "src.league_manager.main:main"
referee = "src.referee.main:main"
player = "src.player.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E741",  # Allow ambiguous variable names (e.g., 'O' for tic-tac-toe)
    "E501",  # Allow lines longer than 120 chars (already set in line-length)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401"]  # Allow unused imports in tests
